[package]
name = "counters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["tracing", "ws", "headers", "macros"] }
bitflags = "2.4.0"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tower-http = { version = "0.4.3", features = ["tracing", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4", "zerocopy", "serde", "rand"] }
